# CSCI-493

./: CMakeLists.txt  README.md  generate_input  main  main.cpp  read_output
Assignments/assignment_1/: main.cpp
Assignments/assignment_2/: Integral.cpp  Integral.h
Assignments/assignment_3/: HW3_Guidelines.txt  generate_input.cpp  read_output.cpp
